--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </h1>
         <div id="all">
             <div id="table">
-                <p style="color: black; font-size: 30px;font-weight: bold;"> Enter you Password</p>
+                <p style="color: black; font-size: 30px;font-weight: bold;"> Enter your Password</p>
                 <div id="flex">
                     <div class="eqn">
                         <input type="text" class="input" placeholder="Enter your Password" id="Password"> 
